--- a/src/components/documentation/Documentation.less
+++ b/src/components/documentation/Documentation.less
@@ -99,7 +99,7 @@
         margin-top: 60px;
         padding-bottom: 20px;
         >button{
-            width: 180px;
+            width: 190px;
             height: 42px;
             font-size: 16px;
         }
@@ -189,7 +189,8 @@
         }
         .submit-content{
             button{
-                width: 160px;
+                font-size: 14px;
+                width: 170px;
                 height: 35px;
             }
         }
@@ -221,7 +222,7 @@
         }
         .submit-content{
             button{
-                width: 120px;
+                width: 130px;
                 height: 30px;
                 font-size: 10px !important;
             }
